RESOLVED FIXED 202585
PendingImageBitmap should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=202585
Summary PendingImageBitmap should not prevent entering the back/forward cache
Chris Dumez
Reported 2019-10-04 08:43:46 PDT
PendingImageBitmap should not prevent entering the back/forward cache.
Attachments
Patch (9.00 KB, patch)
2019-10-04 10:43 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-04 10:43:15 PDT
Radar WebKit Bug Importer
Comment 2 2019-10-07 08:13:56 PDT
Tim Horton
Comment 3 2019-10-07 10:58:15 PDT
Comment on attachment 380227 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380227&action=review > LayoutTests/TestExpectations:265 > +fast/history/page-cache-createImageBitmap.html [ DumpJSConsoleLogInStdErr ] Weird, why is this an option here instead of in the <!-- webkit-test-runner --> block I wonder
WebKit Commit Bot
Comment 4 2019-10-07 11:58:30 PDT
Comment on attachment 380227 [details] Patch Clearing flags on attachment: 380227 Committed r250782: <https://trac.webkit.org/changeset/250782>
WebKit Commit Bot
Comment 5 2019-10-07 11:58:32 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 6 2019-10-07 13:03:32 PDT
(In reply to Tim Horton from comment #3) > Comment on attachment 380227 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=380227&action=review > > > LayoutTests/TestExpectations:265 > > +fast/history/page-cache-createImageBitmap.html [ DumpJSConsoleLogInStdErr ] > > Weird, why is this an option here instead of in the <!-- webkit-test-runner > --> block I wonder Do we have such a <!-- webkit-test-runner option?
Tim Horton
Comment 7 2019-10-07 14:08:35 PDT
(In reply to Chris Dumez from comment #6) > (In reply to Tim Horton from comment #3) > > Comment on attachment 380227 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=380227&action=review > > > > > LayoutTests/TestExpectations:265 > > > +fast/history/page-cache-createImageBitmap.html [ DumpJSConsoleLogInStdErr ] > > > > Weird, why is this an option here instead of in the <!-- webkit-test-runner > > --> block I wonder > > Do we have such a <!-- webkit-test-runner option? I don't know! This wasn't so much a complaint about your patch as a "huh it's weird we do this that way".
Chris Dumez
Comment 8 2019-10-07 14:09:57 PDT
(In reply to Tim Horton from comment #7) > (In reply to Chris Dumez from comment #6) > > (In reply to Tim Horton from comment #3) > > > Comment on attachment 380227 [details] > > > Patch > > > > > > View in context: > > > https://bugs.webkit.org/attachment.cgi?id=380227&action=review > > > > > > > LayoutTests/TestExpectations:265 > > > > +fast/history/page-cache-createImageBitmap.html [ DumpJSConsoleLogInStdErr ] > > > > > > Weird, why is this an option here instead of in the <!-- webkit-test-runner > > > --> block I wonder > > > > Do we have such a <!-- webkit-test-runner option? > > I don't know! This wasn't so much a complaint about your patch as a "huh > it's weird we do this that way". Historically, we've had to use this a lot of Web-platform-tests, which we cannot modify. I think this feature was actually added for WPT.
Note You need to log in before you can comment on or make changes to this bug.