PendingImageBitmap should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=202585

Reviewed by Tim Horton.

Source/WebCore:

Add PageCache support to PendingImageBitmap by doing the promise resolution on a
SuspendableTimer (which properly gets paused while in PageCache).

Test: fast/history/page-cache-createImageBitmap.html

* html/ImageBitmap.cpp:

LayoutTests:

Add layout test coverage.

* TestExpectations:
* fast/history/page-cache-createImageBitmap-expected.txt: Added.
* fast/history/page-cache-createImageBitmap.html: Added.


Canonical link: https://commits.webkit.org/216111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250782 268f45cc-cd09-0410-ab3c-d52691b4dbfc